--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     testImplementation 'org.testng:testng:7.6.1'
     implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
     testImplementation 'io.github.bonigarcia:webdrivermanager:5.7.0'
+    implementation 'io.cucumber:cucumber-testng:7.19.0'
+    implementation 'io.cucumber:cucumber-core:7.19.0'
+    implementation 'io.cucumber:cucumber-java:7.19.0'
+    implementation 'io.cucumber:cucumber-gherkin:7.19.0'
 }
 
 test {
